<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/city_name_label"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cityTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/weather_temperature"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName" />

    <TextView
        android:id="@+id/cityMinTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/weather_temperature"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/cityMaxTemp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTemp" />

    <TextView
        android:id="@+id/cityMaxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_temperature"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cityMinTemp"
        app:layout_constraintTop_toTopOf="@+id/cityMinTemp" />

    <TextView
        android:id="@+id/minTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_min"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/cityMinTemp"
        app:layout_constraintStart_toStartOf="@+id/cityMinTemp"
        app:layout_constraintTop_toBottomOf="@+id/cityMinTemp" />

    <TextView
        android:id="@+id/maxtempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_max"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/cityMaxTemp"
        app:layout_constraintStart_toStartOf="@id/cityMaxTemp"
        app:layout_constraintTop_toBottomOf="@+id/cityMaxTemp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/weatherDetailCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/grey"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@+id/minTempLabel">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/feelsLike"
                style="@style/HomeCardForm"
                android:layout_marginStart="10dp"
                android:paddingVertical="5dp"
                android:text="@string/feels_like"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/feelsLikeValue"
                style="@style/HomeCardForm"
                android:layout_marginEnd="10dp"
                android:paddingVertical="5dp"
                android:text="@string/weather_temperature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/feelsLike" />

            <TextView
                android:id="@+id/pressure"
                style="@style/HomeCardForm"
                android:layout_marginStart="10dp"
                android:paddingVertical="5dp"
                android:text="@string/pressure"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feelsLike" />

            <TextView
                android:id="@+id/pressureValue"
                style="@style/HomeCardForm"
                android:layout_marginEnd="10dp"
                android:paddingVertical="5dp"
                android:text="@string/weather_temperature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pressure" />

            <TextView
                android:id="@+id/humidity"
                style="@style/HomeCardForm"
                android:layout_marginStart="10dp"
                android:paddingVertical="5dp"
                android:text="@string/humidity"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pressure" />

            <TextView
                android:id="@+id/humidityValue"
                style="@style/HomeCardForm"
                android:layout_marginEnd="10dp"
                android:paddingVertical="5dp"
                android:text="@string/weather_temperature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/humidity" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>